@@ -1,3 +1,9 @@
+2001-08-04  Darin Adler  <darin@bentspoon.com>
+
+	* autogen.sh: Update gettext logic to allow anything that
+	starts with AM and ends with gettext. This makes it work with
+	AM_GLIB_GNU_GETTEXT, which is what libbonobo is now using.
+
 2001-08-03  Martin Baulig  <baulig@suse.de>
 
 	* gnome-pkgconfig.m4 (GNOME_PKGCONFIG_CHECK_VERSION): Removed.
